kubernetes/networking/tailscale/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale
  namespace: utility
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: networking-tailscale-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: tailscale.chamburr.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tailscale
                port:
                  number: 8080
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: tailscale-admin
                port:
                  number: 3000
